# wsjrdp_scripts

./: .gitignore  2025-05-22--Mailing-UL-Info.py  2025-08-01--Einzug-Preview-Lastschriftvereinbarung.py  2025-08-01--SEPA.py  2025-08-05--Mailing-SEPA-Delay.py  2025-08-10--Mailing-SEPA-Pre-Notification.py  2025-09-29--UL-Cluster.py  2025-09-29--UL-Cluster2.py  Birthday-UL-KT.rb  CONTRIBUTING.md  CT-Namenserfassung-Gruppen.xlsm  README.md  birthday_ul_kt.rb  config-dev.yml  contingent_group_size.rb  create_flight.rb  create_flight_list_consense.rb  create_registration_korea.py  create_registration_korea.rb  dump-and-deploy-db.sh  event_group_participants.rb  generate_flight_list.py  meal_specialities.rb  name_badges.rb  not_german.rb  pyproject.toml  rail_and_fly_changes.rb  registration_mapper.py  registration_person.py  requirements.in  requirements.txt  sepa.rb  tox.ini  update-generated-path.sh
2023/: .editorconfig  contingent_group_size.rb  fix_sepa.rb  name_badges.rb  unit_members_by_zip_code.rb  update_head.rb  update_rail_and_fly.rb
accounting_tools/: .gitignore  2025-08-05--Mailing-SEPA-Delay.py  2025-08-10--Mailing-SEPA-Pre-Notification.py  2025-08-10--Pre-Notification-DB-Entries.py  2025-11-07--SEPA-Delay.py  WSJ27-Sondervereinbarung-Beitrag-Raten.docx  create_and_send_pre_notifications.html  create_and_send_pre_notifications.py  create_and_send_pre_notifications.yml  create_and_send_pre_notifications_OLD.py  datev_csv_for_payment_initiation.py  insert_camt_into_hitobito.py  insert_moss_balance_movements_into_hitobito.py  missing_installment.py  missing_installment.yml  sepa_direct_debit.py  sondervereinbarungen_beitrag_raten.py  sondervereinbarungen_beitrag_raten.yml
bus/: update_bus.py
deregistration_tools/: cancellation_request.typ  storno_registrierung.py  wsjrdp2027.typ
examples/: example_people_dataframe.py  example_send_plaintext_email.py  example_sepa_direct_debit.py
flight_excel/: create_flight.py  generate_flight_list.py  update_flight.py
integration-tests/: .gitignore  README.md  config-integration-tests.yml  configure_for_prod_like_testing.py  conftest.py  docker-compose.yml  pytest.ini
kolaISTKTMealplan/: kola_ist_kt_meal_plan.py
mailings/: 2025-09-19--Anmelde-Turbo--Mailing-IST.py  2025-09-19--Anmelde-Turbo--Mailing-UL.py  2025-09-29--Anmelde-Turbo--Mailing-YP.py  2025-10-07--Anmelde-Turbo--Mailing-UL-Telegram.py  2025-10-17--Anmelde-Turbo--Mailing-UL-Telegram-Runde2.py  2025-11-10__Letzte-Tage-Anmeldung-IST.yml  2025-11-10__Letzte-Tage-Anmeldung-UL.yml  2025-11-10__Letzte-Tage-Anmeldung-YP.yml  2025-11-28__IST-Welcome-Mail.yml  2026-02-08__IST-First-Meeting-Invitation.yml  2026-03-18__IST-Warteliste.yml  2026-04-30__IST-Regionalgruppe.yml
newsletter/: 2025-12-24__HTML-Test-Newsletter.html  2025-12-24__HTML-Test-Newsletter.yml  2025-12-25__HTML-Weihnachtsgruß-Newsletter.html  2025-12-25__HTML-Weihnachtsgruß-Newsletter.yml  2026-03-27__HTML-Ostergruß-Newsletter-Test.yml  2026-04-05__HTML-Ostergruß-Newsletter.yml  2026-04-06__HTML-Ostergruß-Newsletter.html
registration_tools/: 2025-11-17__Anmeldung-geschlossen-Willkommen-auf-der-Warteliste-IST-abgemeldet.yml  2025-11-17__Anmeldung-geschlossen-Willkommen-auf-der-Warteliste-IST.yml  2025-11-17__Anmeldung-geschlossen-Willkommen-auf-der-Warteliste-YP-abgemeldet.yml  2025-11-17__Anmeldung-geschlossen-Willkommen-auf-der-Warteliste-YP.yml  2025-11-25__UL-Rollenwechsel-zu-IST.yml  2025-12-07__Confirmation-Delay-YP-UL-IST.yml  2025-12-16__Confirmation-CMT.yml  2025-12-16__Confirmation-IST.yml  2025-12-16__Confirmation-UL.yml  2025-12-16__Confirmation-YP.yml  2026-02-11__Onboarding-BMT.yml  2026-04-06__Photopolicy.yml  Confirmation-IST.yml  Confirmation-UL.yml  Confirmation-YP.yml  Verschiebung-in-Units-UL.yml  Verschiebung-in-Units-YP.yml  Verschiebung-zu-Warteliste-YP.yml  bestätigung_abmeldung.py  bestätigung_abmeldung.typ  bestätigung_abmeldung_CMT.yml  bestätigung_abmeldung_IST.yml  bestätigung_abmeldung_YP.yml  bestätigung_storno_registrierung.py  bestätigung_storno_registrierung.typ  bestätigung_storno_registrierung.yml  create_deregistration_form.py  create_deregistration_form.typ  create_deregistration_form.yml  late_confirmation.py  late_confirmation_BMT.yml  late_confirmation_CMT.yml  late_confirmation_IST.yml  late_confirmation_UL.yml  late_confirmation_YP.yml  moss_impersonation_helper.py  moss_invitations_helper.py  move_ist_to_bmt.py  move_to_group.py  move_to_units.py  (+12 more)
statistic_tools/: buddy_id_cluster.py  role_by_association.py  unit_cluster_by_association.py  unit_cluster_by_zip_code.py
tools/: 2025-12-22__Kickoff-UL.yml  2025-12-23__HTML-Test.yml  db_dump.py  db_dump_and_restore_into_dev.py  db_restore.py  mailing_from_yml.py  move_longtitude_latitude.py  sepa_direct_debit.py  (+2 more)
(+52 files in other folders)
