[project]
name = "wsjrdp-scripts"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "docx2pdf>=0.1.8",
    "lxml>=6.0.2",
    "networkx[default]>=3.5",
    "pytest-docker>=3.2.5",
    "python-docx-replace>=0.4.4",
    "requests>=2.32.5",
    "ruamel-yaml>=0.18.16",
    "typst>=0.14.1",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "paramiko>=3.5.1",
    "psycopg[binary]>=3.2.9",
    "pyyaml>=6.0.2",
    "ruff>=0.12.7",
    "sepaxml>=2.6.2",
    "sshtunnel>=0.4.0",
    "ty>=0.0.1a34",
    "types-lxml>=2025.11.25",
    "types-networkx>=3.6.1.20251212",
    "xlsxwriter>=3.2.5",
]
editables = [
    "wsjrdp2027",
    "pytest-wsjrdp2027",
]
type-checking = [
    "mypy>=1.17.1",
    "pandas-stubs",
    "ty",
    "types-humanfriendly>=10.0.1.20250319",
    "types-lxml",
    "types-networkx",
]
pytest = [
    "pytest>=9.0.2",
    "time-machine>=3.2.0",
]
tox = [
    "tox>=4.32.0",
    "tox-uv>=1.29.0",
]
ruff = [
    "ruff",
]



[tool.uv]
# paramiko 4 breaks sshtunnel 0.4.0
constraint-dependencies = ["paramiko<4"]
default-groups = [
    "dev",
    "editables",
    "pytest",
    "type-checking",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
wsjrdp2027 = { workspace = true }
pytest-wsjrdp2027 = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/wsjrdp2027",
    "packages/pytest_wsjrdp2027",
]



[tool.pytest]
addopts = ["--doctest-modules", "--pyargs", "--showlocals", "-vv"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
norecursedirs = ["integration-tests", "2023"]



[tool.ruff]
extend-exclude = [
    "2023",
]

[tool.ruff.lint]
ignore = [
    "E712",  # Avoid equality comparisons to `{}`; use `{}` for false checks
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "F541",  # f-string without any placeholders
    "F841",  # Local variable `{}` is assigned to but never used
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2



[tool.ty.src]
exclude = [
    "2023",
]
